normalize, common y footer planteados. Assets añadidos

--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+    <title>Avengers MCU</title>
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/common.css">
+    <link rel="stylesheet" href="styles/footer.css">
     
+</head>
+<body class="main-bg">
+    <h1>Iniciativa Avengers</h1>
+    <h2>Sobre la Saga del Infinito</h2>
+    <p class="content">La Saga del Infinito (en inglés, The Infinity Saga) es la línea principal compuesta por las primeras veintitrés películas del Universo Cinematográfico de Marvel, que abarca la Fase Uno, la Fase Dos y la Fase Tres de la franquicia. Esta comenzó con el estreno de Iron Man el 2 de mayo de 2008 y concluyó con Spider-Man: Far From Home el 2 de julio de 2019.</p>
+    <hr>
+    <h2>Películas</h2>
+    <p class="default">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora dolor quam quo sit iusto veniam voluptatum porro optio, esse quod. Nihil iure laborum possimus vero saepe non voluptatum quibusdam sint?</p>
+    <footer  class="footer">
+        <p>2024 LuBoCaDev. All rights reserved</p>
+    </footer>
 </body>
 </html>
