desarrollo de página de proyectos con greeds y retoque de otros CSSs

--- a/peliculas.html
+++ b/peliculas.html
@@ -1,11 +1,207 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Películas</title>
+    <!--Estilos-->
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/common.css">
+    <link rel="stylesheet" href="styles/components.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/banner.css">
+    <link rel="stylesheet" href="styles/info.css">
+    <link rel="stylesheet" href="styles/proyects.css">
+    <!--Open Graphs-->
+    <meta property="og:title" content="Avengers MCU - Películas">
+    <meta property="og:description" content="Cada uno de los proyectos en los que han participado los Avengers">
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/0/0c/Marvel_Cinematic_Universe_logo.png">
 </head>
-<body>
+
+
+<body class="main-bg">
+
+    <!--HEADER/NAVBAR-->
+    <header class="header">
+        <img class="image" src="./assets/imagensuperior.png" alt="Infinite Saga brand"> 
+        <nav class="nav">
+            <ul class="list">
+                <li class="item">
+                    <a class="btn hidden" href="#avengers">Los Vengadores</a>
+                </li>
+                <li class="item">
+                    <a class="btn hidden" href="#saga">La Saga del Infinito</a>
+                </li>
+                <li class="item">
+                    <a class="btn" href="https://marvelcinematicuniverse.fandom.com/es/wiki/Marvel_Cinematic_Universe_Wiki" target="_blank" rel="noopener noreferrer">Wiki</a>
+                </li>
+                <li class="item">
+                    <a class="btn" href="../p2_html_css/peliculas.html">Películas</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <!--BANNER-->
+    <section class="banner">
+        <div class="image"></div>
+        <div class="content">
+            <h2>Los Vengadores y la Saga del Infinito</h2>
+            <p class="italic">La apasionante búsqueda de las piedras del infinito y como estas lo cambiaron todo</p>
+        </div>   
+    </section>
     
+
+
+    <!--PROYECTOS(películas)-->
+    <section id="proyectos" class="proyectos">
+        <section>
+            <h2>Fase 1</h2>
+            <ul class="list">
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/1ironman1.png" alt="Portada de Iron Man">
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/2hulk1.png" alt="Portada de The Incredible Hulk">
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/3ironman2.png" alt="Portada de Iron Man 2">
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/4thor1.png" alt="Portada de Thor">
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/5capitanamerica1.png" alt="Portada de Capitan America: The first avenger">
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/6avengers1.png" alt="Portada de The Avengers">
+                    </figure>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Fase 2</h2>
+            <ul class="list">
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/7ironman3.png" alt="Portada de Iron Man 3">
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/8thor2.png" alt="Portada de Thor: The Dark World">
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/9capitanamerica2.png" alt="Portada de Captain America: The Winter Soldier">
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/10guardianes1.png" alt="Portada de Guardianes de la Galaxia">
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/11avengers2.png" alt="Portada de Avengers: Era de Ultron">
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/12antman1.png" alt="Portada de Ant-Man">
+                    </figure>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Fase 3</h2>
+            <ul class="list">
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/13capitanamerica3.png" alt="Portada de Capitan America: Civil War">
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/14drstrange1.png" alt="Portada de Doctor Strange">
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/15guardianes2.png" alt="Portada de Guardianes de la Galaxia Vol.2">
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/16 spiderman1.png" alt="Portada de Spider-man: Homecoming">
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/17thor3.png" alt="Portada de Thor: Ragnarok">
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/18blackpanther1.png" alt="Portada de Black Panther">
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/19avengers3.png" alt="Portada de Avengers: Infinity War">
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/20antman2.png" alt="Portada de Ant-Man y la Avispa">
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/21capitanamarvel1.png" alt="Portada de Capitana Marvel">
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/22avengers4.png" alt="Portada de Avengers: Endgame">
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="assets/Portadas/23spiderman2.png" alt="Portada de Spider-man: Far from Home">
+                    </figure>
+                </li>
+            </ul>
+        </section>
+
+
+    </section>
+
+
+
+
+
+    <!--FOOTER-->
+    <footer  class="footer">
+        <p>2024 LuBoCaDev. Without rights to reserve :(</p>
+    </footer>
 </body>
+
+
+
 </html>
