estructura general lista, footer terminado, página de proyectos casi lista

--- a/peliculas.html
+++ b/peliculas.html
@@ -43,19 +43,39 @@
         </nav>
     </header>
 
-    <!--BANNER-->
-    <section class="banner">
-        <div class="image"></div>
-        <div class="content">
-            <h2>Los Vengadores y la Saga del Infinito</h2>
-            <p class="italic">La apasionante búsqueda de las piedras del infinito y como estas lo cambiaron todo</p>
-        </div>   
+
+
+    <section class="info">
+        <div>
+            <h2>La Saga del Infinito</h2>
+            <p>La Saga gira en torno a las Gemas del Infinito, capaces de controlar los aspectos esenciales del universo. Thanos busca reunirlas para eliminar la mitad de la vida en el universo. Los héroes de la Tierra, junto con otros personajes cósmicos, se unen para detenerlo.</p>
+        </div>
+
+        <!--Video de YT-->
+        <div class="info">
+            <iframe 
+            width="360"
+            height="215"
+            src="https://www.youtube-nocookie.com/embed/tlbjBLAfQ8E?si=aC7jcUC8Q74omXU-&amp;controls=0"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay ; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen>
+        </iframe>
+            </div>
+
+
+
+
+
+
+        
     </section>
-    
 
 
     <!--PROYECTOS(películas)-->
-    <section id="proyectos" class="proyectos">
+    <section class="proyectos">
         <section>
             <h2>Fase 1</h2>
             <ul class="list">
@@ -63,31 +83,43 @@
                     <figure>
                         <img src="assets/Portadas/1ironman1.png" alt="Portada de Iron Man">
                     </figure>
+                    <p>Iron Man</p>
+                    <p>2 de mayo de 2008 (EE.UU.)	Jon Favreau</p>
                 </li>
                 <li>
                     <figure>
                         <img src="assets/Portadas/2hulk1.png" alt="Portada de The Incredible Hulk">
                     </figure>
+                    <p>The Incredible Hulk</p>
+                    <p>13 de junio de 2008 (EE.UU.)	Louis Leterrier</p>
                 </li>
                 <li>
                     <figure>
                         <img src="assets/Portadas/3ironman2.png" alt="Portada de Iron Man 2">
                     </figure>
+                    <p>Iron Man 2</p>
+                    <p>7 de mayo de 2010 (EE.UU.)	Jon Favreau</p>
                 </li>
                 <li>
                     <figure>
                         <img src="assets/Portadas/4thor1.png" alt="Portada de Thor">
                     </figure>
+                    <p>Thor</p>
+                    <p>6 de mayo de 2011 (EE.UU.)	Kenneth Branagh</p>
                 </li>
                 <li>
                     <figure>
                         <img src="assets/Portadas/5capitanamerica1.png" alt="Portada de Capitan America: The first avenger">
                     </figure>
+                    <p>Capitan America: The first avenger</p>
+                    <p>22 de julio de 2011 (EE.UU.)	Joe Johnston</p>
                 </li>
                 <li>
                     <figure>
                         <img src="assets/Portadas/6avengers1.png" alt="Portada de The Avengers">
                     </figure>
+                    <p>The Avengers</p>
+                    <p>4 de mayo de 2012 (EE.UU.)	Joss Whedon</p>
                 </li>
             </ul>
         </section>
@@ -99,31 +131,43 @@
                     <figure>
                         <img src="assets/Portadas/7ironman3.png" alt="Portada de Iron Man 3">
                     </figure>
+                    <p>Iron Man 3</p>
+                    <p>3 de mayo de 2013 (EE.UU.)	Shane Black</p>
                 </li>
                 <li>
                     <figure>
                         <img src="assets/Portadas/8thor2.png" alt="Portada de Thor: The Dark World">
                     </figure>
+                    <p>Thor: The Dark World</p>
+                    <p>8 de noviembre de 2013 (EE.UU.)	Alan Taylor</p>
                 </li>
                 <li>
                     <figure>
                         <img src="assets/Portadas/9capitanamerica2.png" alt="Portada de Captain America: The Winter Soldier">
                     </figure>
+                    <p>Captain America: The Winter Soldier</p>
+                    <p>4 de abril de 2014 (EE.UU.)	Joe Russo y Anthony Russo</p>
                 </li>
                 <li>
                     <figure>
                         <img src="assets/Portadas/10guardianes1.png" alt="Portada de Guardianes de la Galaxia">
                     </figure>
+                    <p>Guardianes de la Galaxia</p>
+                    <p>1 de agosto de 2014 (EE.UU.)	James Gunn</p>
                 </li>
                 <li>
                     <figure>
                         <img src="assets/Portadas/11avengers2.png" alt="Portada de Avengers: Era de Ultron">
                     </figure>
+                    <p>Avengers: Era de Ultron</p>
+                    <p>1 de mayo de 2015 (EE.UU.)	Joss Whedon</p>
                 </li>
                 <li>
                     <figure>
                         <img src="assets/Portadas/12antman1.png" alt="Portada de Ant-Man">
                     </figure>
+                    <p>Ant-Man</p>
+                    <p>17 de julio de 2015 (EE.UU.)	Peyton Reed</p>
                 </li>
             </ul>
         </section>
@@ -135,56 +179,78 @@
                     <figure>
                         <img src="assets/Portadas/13capitanamerica3.png" alt="Portada de Capitan America: Civil War">
                     </figure>
+                    <p>Capitan America: Civil War</p>
+                    <p>6 de mayo de 2016 (EE.UU.)	Joe Russo y Anthony Russo</p>
                 </li>
                 <li>
                     <figure>
                         <img src="assets/Portadas/14drstrange1.png" alt="Portada de Doctor Strange">
                     </figure>
+                    <p>Doctor Strange</p>
+                    <p>4 de noviembre de 2016 (EE.UU.)	Scott Derrickson</p>
                 </li>
                 <li>
                     <figure>
                         <img src="assets/Portadas/15guardianes2.png" alt="Portada de Guardianes de la Galaxia Vol.2">
                     </figure>
+                    <p>Guardianes de la Galaxia Vol.2</p>
+                    <p>5 de mayo de 2017 (EE.UU.)	James Gunn</p>
                 </li>
                 <li>
                     <figure>
                         <img src="assets/Portadas/16 spiderman1.png" alt="Portada de Spider-man: Homecoming">
                     </figure>
+                    <p>Spider-man: Homecoming</p>
+                    <p>7 de julio de 2017 (EE.UU.)	Jon Watts</p>
                 </li>
                 <li>
                     <figure>
                         <img src="assets/Portadas/17thor3.png" alt="Portada de Thor: Ragnarok">
                     </figure>
+                    <p>Thor: Ragnarok</p>
+                    <p>3 de noviembre de 2017 (EE.UU.)	Taika Waititi</p>
                 </li>
                 <li>
                     <figure>
                         <img src="assets/Portadas/18blackpanther1.png" alt="Portada de Black Panther">
                     </figure>
+                    <p>Black Panther</p>
+                    <p>16 de febrero de 2018 (EE.UU.)	Ryan Coogler</p>
                 </li>
                 <li>
                     <figure>
                         <img src="assets/Portadas/19avengers3.png" alt="Portada de Avengers: Infinity War">
                     </figure>
+                    <p>Avengers: Infinity War</p>
+                    <p>27 de abril de 2018 (EE.UU.)	Joe Russo y Anthony Russo</p>
                 </li>
                 <li>
                     <figure>
                         <img src="assets/Portadas/20antman2.png" alt="Portada de Ant-Man y la Avispa">
                     </figure>
+                    <p>Ant-Man y la Avispa</p>
+                    <p>6 de julio de 2018 (EE.UU.)	Peyton Reed</p>
                 </li>
                 <li>
                     <figure>
                         <img src="assets/Portadas/21capitanamarvel1.png" alt="Portada de Capitana Marvel">
                     </figure>
+                    <p>Capitana Marvel</p>
+                    <p>8 de marzo de 2019 (EE.UU.)	Anna Boden y Ryan Fleck</p>
                 </li>
                 <li>
                     <figure>
                         <img src="assets/Portadas/22avengers4.png" alt="Portada de Avengers: Endgame">
                     </figure>
+                    <p>Avengers: Endgame</p>
+                    <p>26 de abril de 2019 (EE.UU.)	Joe Russo y Anthony Russo</p>
                 </li>
                 <li>
                     <figure>
                         <img src="assets/Portadas/23spiderman2.png" alt="Portada de Spider-man: Far from Home">
                     </figure>
+                    <p>Spider-man: Far from Home</p>
+                    <p>2 de julio de 2019 (EE.UU.)	Jon Watts</p>
                 </li>
             </ul>
         </section>
@@ -198,10 +264,10 @@
 
     <!--FOOTER-->
     <footer  class="footer">
-        <p>2024 LuBoCaDev. Without rights to reserve :(</p>
-    </footer>
+        <a href="http://facebook.com/marvel" target="_blank" rel="noopener noreferrer"><img src="assets/iconos rrss/facebook.png" class="img" alt="Acceso a Facebook"></a>
+        <a href="http://instagram.com/marvel" target="_blank" rel="noopener noreferrer"> <img src="assets/iconos rrss/instagram.png" class="img" alt="Acceso a Instagram" ></a>
+        <a href="https://www.tiktok.com/@marvel" target="_blank" rel="noopener noreferrer"><img src="assets/iconos rrss/tiktok.png" class="img" alt="Acceso a TikTok"></a>
+        <a href="http://youtube.com/marvel" target="_blank" rel="noopener noreferrer"><img src="assets/iconos rrss/youtube.png" class="img" alt="Acceso a Youtube"></a>
+</footer>
 </body>
-
-
-
 </html>
