sesion de noche de insomnio: navbar terminado,form terminado, proyects terminado, 404 terminada, 500 planteado

--- a/peliculas.html
+++ b/peliculas.html
@@ -21,23 +21,22 @@
 
 
 <body class="main-bg">
-
     <!--HEADER/NAVBAR-->
     <header class="header">
-        <img class="image" src="./assets/imagensuperior.png" alt="Infinite Saga brand"> 
+        <img class="image" src="assets/headerimg.png" alt="Infinite Saga brand"> 
         <nav class="nav">
             <ul class="list">
                 <li class="item">
-                    <a class="btn hidden" href="#avengers">Los Vengadores</a>
+                    <a class="btn hidden" href="#avengers">Iniciativa Vengadores</a>
                 </li>
                 <li class="item">
-                    <a class="btn hidden" href="#saga">La Saga del Infinito</a>
+                    <a class="btn" href="../p2_html_css/peliculas.html">Saga</a>
                 </li>
                 <li class="item">
-                    <a class="btn" href="https://marvelcinematicuniverse.fandom.com/es/wiki/Marvel_Cinematic_Universe_Wiki" target="_blank" rel="noopener noreferrer">Wiki</a>
+                    <a class="btn" href="whatif.html" target="_blank" rel="noopener noreferrer">What if...?</a>
                 </li>
                 <li class="item">
-                    <a class="btn" href="../p2_html_css/peliculas.html">Películas</a>
+                    <a class="btn hidden" href="#avengers">Recibir más info</a>
                 </li>
             </ul>
         </nav>
