animaciones a imagenes de proyectos y animaciones barras de habilidades, media queries añadidas

--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
         </div>
         <img src="assets/404 y 500/DeadpoollovesignPNGImage.png" alt="Deadpoop te da Error 404">
         <div class="button-deadpool-troll">
-        <a href="index.html" target="_blank"><button>O puedes volver con los Avengers :(</button></a>
+        <a href="index.html" target="_blank"><button>O pulsa aquí para volver con los Avengers :(</button></a>
     </div>
     </div>
 </body>
