--- a/500.html
+++ b/500.html
@@ -16,6 +16,13 @@
 
 
 <body class="main-bg">
+    <div></div>
+
+
+
+
+
+
     <div class="card404">
         <div class="error-message">Error 500: Internal server error</div>
         <div>¿Qué tal si ves este pedazo de baile de Dead Pool?</div>
