--- a/whatif.html
+++ b/whatif.html
@@ -25,16 +25,19 @@
 <body class="main-bg">
 
 
-    <section class="general-body">
-        <div class="general-contenido">
-            <h1>Cualidades de los Avengers</h1>
-            <h3>Hay que destacar que los Vengadores tienen muchas cualidades a la hora de llevar a cabo sus misiones, pero estas son las principales.</h3>
-            
-            <div class="spinner">Salvar el mundo</div>
-            <div class="spinner second">Destruir a su paso</div>
-            <div class="spinner third">Vestir bien</div>
-            <div class="spinner fourth">Chistes malos</div>
-            <div class="spinner fifth">Comer Kebabs</div>
+    <section>
+        <div class="error500">
+            <div class="error-message">Error 500: Internal server error</div>
+            <div class="sub-message">¿Qué tal si ves este pedazo de baile de Dead Pool?</div>
+
+            <div class="video">
+                <div>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/PT2O0pGuuc0?autoplay=1&mute=1&loop=1&start=132&playlist=PT2O0pGuuc0" 
+                    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <img src="assets/404 y 500/404mini.png" alt="Deadpoop te da Error 404" class="background-image">
         </div>
     </section>
 
