--- a/500.html
+++ b/500.html
@@ -7,56 +7,42 @@
     <!--Estilos-->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/common.css">
-    <link rel="stylesheet" href="styles/card404_500.css">
+    <link rel="stylesheet" href="styles/components.css">
+    <link rel="stylesheet" href="styles/error500.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <!--Open Graphs-->
     <meta property="og:title" content="Error 500">
-    <meta property="og:description" content="Internal server error">
+    <meta property="og:description" content="Error 500: Internal server error">
     <meta property="og:image" content="https://seeklogo.com/images/D/deadpool-logo-94CDEB7021-seeklogo.com.png">
 </head>
 
 
 <body class="main-bg">
-    <div></div>
-
-
-
-
-
-
-    <div class="card404">
-        <div class="error-message">Error 500: Internal server error</div>
-        <div>¿Qué tal si ves este pedazo de baile de Dead Pool?</div>
-        <div class="button-deadpool-web">
-        </div>
-        <img src="assets/404 y 500/404mini.png" alt="Deadpoop te da Error 404">
-
-        <div class="info">
-            <iframe 
-            width="360"
-            height="215"
-            src="https://www.youtube-nocookie.com/embed/tlbjBLAfQ8E?si=aC7jcUC8Q74omXU-&amp;controls=0"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay ; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin"
-            allowfullscreen>
-        </iframe>
+    <section>
+        <!--Mensaje de Error-->
+        <div class="error500">
+            <div class="error-message">Error 500: Internal server error</div>
+            <div class="sub-message">¿Qué tal si ves este pedazo de baile de Dead Pool?</div>
+        <!--Video con fade in en caida-->
+            <div class="video">
+                <div>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/PT2O0pGuuc0?autoplay=1&mute=1&loop=1&start=132&playlist=PT2O0pGuuc0" 
+                    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </div>
             </div>
+        <!--Imagen de fondo-->
+            <img src="assets/404 y 500/404mini.png" alt="Deadpoop te da Error 404" class="background-image">
+        </div>
+    </section>
 
 
 
-
-
-
-
-
-
-
-
-
-        <div class="button-deadpool-troll">
-        <a href="index.html" target="_blank"><button>O puedes volver con los Avengers :(</button></a>
-    </div>
-    </div>
+    <!--FOOTER-->
+    <footer  class="footer">
+            <a href="http://facebook.com/marvel" target="_blank" rel="noopener noreferrer"><img src="assets/iconos rrss/facebook.png" class="img" alt="Acceso a Facebook"></a>
+            <a href="http://instagram.com/marvel" target="_blank" rel="noopener noreferrer"> <img src="assets/iconos rrss/instagram.png" class="img" alt="Acceso a Instagram" ></a>
+            <a href="https://www.tiktok.com/@marvel" target="_blank" rel="noopener noreferrer"><img src="assets/iconos rrss/tiktok.png" class="img" alt="Acceso a TikTok"></a>
+            <a href="http://youtube.com/marvel" target="_blank" rel="noopener noreferrer"><img src="assets/iconos rrss/youtube.png" class="img" alt="Acceso a Youtube"></a>
+    </footer>
 </body>
 </html>
