web mayormente terminada a falta de una página adicional opcional

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avengers MCU</title>
+    <title>Portfolio de los Avengers</title>
     <!--Estilos-->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/common.css">
@@ -11,13 +11,12 @@
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/banner.css">
-    <link rel="stylesheet" href="styles/info.css">
     <link rel="stylesheet" href="styles/spinners.css">
     <link rel="stylesheet" href="styles/form.css">
     <!--Open Graphs-->
     <meta property="og:title" content="Avengers MCU">
     <meta property="og:description" content="Porfolio de los Avengers del universo cinematográfico de Marvel">
-    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/0/0c/Marvel_Cinematic_Universe_logo.png">
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Symbol_from_Marvel%27s_The_Avengers_logo.svg/191px-Symbol_from_Marvel%27s_The_Avengers_logo.svg.png">
 </head>
 
 
@@ -29,13 +28,13 @@
         <nav class="nav">
             <ul class="list">
                 <li class="item">
-                    <a class="btn hidden" href="#avengers">Iniciativa Vengadores</a>
+                    <a class="btn " href="index.html">Iniciativa Vengadores</a>
                 </li>
                 <li class="item">
                     <a class="btn" href="peliculas.html">Saga</a>
                 </li>
                 <li class="item">
-                    <a class="btn" href="whatif.html">What if...?</a>
+                    <a class="btn hidden" href="whatif.html">What if...?</a>
                 </li>
                 <li class="item">
                     <a class="btn hidden" href="#formulario">Recibir más info</a>
@@ -61,16 +60,16 @@
         <h1 id="avengers">Los Vengadores</h1>
         <p class="content">Los Vengadores (Avengers) en el MCU (Marvel Cinematic Universe) son un equipo de superhéroes formado para proteger la Tierra de amenazas globales. Los miembros originales incluyen Iron Man, Thor, Hulk, Capitán América, Black Widow y Hawkeye. A lo largo de las películas, el equipo crece e incluye héroes como Spider-Man, Black Panther, Scarlet Witch y Doctor Strange, entre otros. Juntos enfrentan enemigos poderosos como Loki, Ultron y Thanos.</p>
     </div>
-
+    <!--Barritas de habilidades-->
         <div class="general-contenido">
             <h2>Habilidades de los Avengers</h2>
             <p>Hay que destacar que los Vengadores tienen muchas cualidades a la hora de llevar a cabo sus misiones, pero estas son las principales:</p>
             
-            <div class="spinner">Salvar el mundo</div>
-            <div class="spinner second">Destruir a su paso</div>
-            <div class="spinner third">Vestir bien</div>
-            <div class="spinner fourth">Chistes malos</div>
-            <div class="spinner fifth">Comer Kebabs</div>
+            <div class="barritas">Salvar el mundo</div>
+            <div class="barritas second">Destruir a su paso</div>
+            <div class="barritas third">Vestir bien</div>
+            <div class="barritas fourth">Chistes malos</div>
+            <div class="barritas fifth">Comer Kebabs</div>
         </div>
     </section>
         
