--- a/peliculas.html
+++ b/peliculas.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="styles/common.css">
     <link rel="stylesheet" href="styles/components.css">
     <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/banner.css">
-    <link rel="stylesheet" href="styles/info.css">
+    <link rel="stylesheet" href="styles/texto-video-saga.css">
     <link rel="stylesheet" href="styles/proyects.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <!--Open Graphs-->
-    <meta property="og:title" content="Avengers MCU - Películas">
+    <meta property="og:title" content="Películas de los Avengers">
     <meta property="og:description" content="Cada uno de los proyectos en los que han participado los Avengers">
-    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/0/0c/Marvel_Cinematic_Universe_logo.png">
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Symbol_from_Marvel%27s_The_Avengers_logo.svg/191px-Symbol_from_Marvel%27s_The_Avengers_logo.svg.png">
 </head>
 
 
@@ -27,16 +27,13 @@
         <nav class="nav">
             <ul class="list">
                 <li class="item">
-                    <a class="btn hidden" href="#avengers">Iniciativa Vengadores</a>
+                    <a class="btn " href="index.html">Iniciativa Vengadores</a>
                 </li>
                 <li class="item">
-                    <a class="btn" href="../p2_html_css/peliculas.html">Saga</a>
+                    <a class="btn" href="peliculas.html">Saga</a>
                 </li>
                 <li class="item">
-                    <a class="btn" href="whatif.html" target="_blank" rel="noopener noreferrer">What if...?</a>
-                </li>
-                <li class="item">
-                    <a class="btn hidden" href="#avengers">Recibir más info</a>
+                    <a class="btn hidden" href="whatif.html">What if...?</a>
                 </li>
             </ul>
         </nav>
@@ -44,26 +41,26 @@
 
 
 
-    <section class="info">
+    <section class="texto-video-saga">
         <div>
             <h2>La Saga del Infinito</h2>
             <p>La Saga gira en torno a las Gemas del Infinito, capaces de controlar los aspectos esenciales del universo. Thanos busca reunirlas para eliminar la mitad de la vida en el universo. Los héroes de la Tierra, junto con otros personajes cósmicos, se unen para detenerlo.</p>
         </div>
-
-        <!--Video de YT-->
-        <div class="info">
+    
+        <!-- Video de YT.  Ojo que el video empieza en negro y por eso parece que no se reproduce-->
+        <div>
             <iframe 
-            width="360"
-            height="215"
-            src="https://www.youtube-nocookie.com/embed/tlbjBLAfQ8E?si=aC7jcUC8Q74omXU-&amp;controls=0"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay ; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin"
-            allowfullscreen>
-        </iframe>
-            </div>
-
+                width="360"
+                height="215"
+                src="https://www.youtube-nocookie.com/embed/tlbjBLAfQ8E?si=aC7jcUC8Q74omXU-&amp;autoplay=1&amp;mute=1" <!-- Eliminar controls=0 -->
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen>
+            </iframe>
+        </div>
+    </section>
 
 
 
