--- a/whatif.html
+++ b/whatif.html
@@ -11,35 +11,25 @@
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/banner.css">
-    <link rel="stylesheet" href="styles/info.css">
-    <link rel="stylesheet" href="styles/form.css">
     <link rel="stylesheet" href="styles/spinners.css">
-    <link rel="stylesheet" href="styles/PRUEBAS.css">
+    <link rel="stylesheet" href="styles/form.css">
     <!--Open Graphs-->
     <meta property="og:title" content="Avengers MCU">
     <meta property="og:description" content="Porfolio de los Avengers del universo cinematográfico de Marvel">
-    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/0/0c/Marvel_Cinematic_Universe_logo.png">
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Symbol_from_Marvel%27s_The_Avengers_logo.svg/191px-Symbol_from_Marvel%27s_The_Avengers_logo.svg.png">
 </head>
 
 
 <body class="main-bg">
-
-
-    <section>
-        <div class="error500">
-            <div class="error-message">Error 500: Internal server error</div>
-            <div class="sub-message">¿Qué tal si ves este pedazo de baile de Dead Pool?</div>
-
-            <div class="video">
-                <div>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/PT2O0pGuuc0?autoplay=1&mute=1&loop=1&start=132&playlist=PT2O0pGuuc0" 
-                    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                </div>
-            </div>
-
-            <img src="assets/404 y 500/404mini.png" alt="Deadpoop te da Error 404" class="background-image">
+    <main>
+        <section class="general-body">
+        <div class="contenido-alternativo">
+            <h1 id="avengers">What if...?</h1>
+            <p class="content">Sabemos que esta página ha salido muy bien, pero... ¿qué habría pasado si nos hubiera saltado un error 404 o un error 500?</p>
+            <p>¡Pulsa en las siguientes imágenes para descubrirlo!</p>
         </div>
-    </section>
+        </section>
+    </main>
 
 
 
